// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ChannelHeaderDropdown/MenuItem.CloseMessage should match snapshot for DM Channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Close Direct Message"
/>
`;

exports[`components/ChannelHeaderDropdown/MenuItem.CloseMessage should match snapshot for GM Channel 1`] = `
<MenuItemAction
  onClick={[Function]}
  show={true}
  text="Close Group Message"
/>
`;
